--- a/scss/main/_skill-bars.scss
+++ b/scss/main/_skill-bars.scss
@@ -14,7 +14,7 @@
     position: relative;
     width: 100%;
     height: 10px;
-    background-color: gray;
+    background-color: #4B4E53;
     border-radius: 20px;
 }
 
@@ -33,7 +33,7 @@
     position: relative;
     width: 100%;
     height: 10px;
-    background-color: gray;
+    background-color: #4B4E53;
     border-radius: 20px;
 }
 
@@ -52,7 +52,7 @@
     position: relative;
     width: 100%;
     height: 10px;
-    background-color: gray;
+    background-color: #4B4E53;
     border-radius: 20px;
 }
 
