--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -11,9 +11,20 @@ h1 {
 }
 
 .project-grid {
+    display: grid; 
+    max-width: 100%;
+    margin: 0 auto;
+    grid-template-columns: auto;
+    // justify-content: center;
+}
+
+.project {
     display: flex; 
     flex-direction: column;
     justify-content: center;
+    border: 2px solid black; 
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .project-card {
