--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -15,16 +15,47 @@ h1 {
     max-width: 100%;
     margin: 0 auto;
     grid-template-columns: auto;
+    grid-gap: 15px 15px;
     // justify-content: center;
 }
 
 .project {
     display: flex; 
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     border: 2px solid black; 
     border-radius: 10px;
-    padding: 20px;
+    padding: 20px 10px;
+    position: relative;
+    overflow: hidden;
+    // align-items: center;
+    color: white;
+    // &:before {
+    //     position:absolute;
+    //     content: '';
+    //     bottom: 0;
+    //     left: 0;
+    //     border-bottom: 200px solid #192841;
+    //     //@warn: 292px solid transparent;
+    //     border-right: 292px solid transparent;
+    //     z-index: -99;
+    // }
+}
+
+.title {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    hr {
+        width: 100%;
+    }
+}
+
+.header {
+    border-left: 100px solid orange;
+    margin: 20px 0;
 }
 
 .project-card {
@@ -86,6 +117,16 @@ h1 {
     background-size: cover;
     border-radius: 10px;
     padding: 10px;
+   // box-shadow: 0px 2px 0px 0px rgba(250,176,255,1);
+    position: relative; 
+}
+
+
+.left {
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 20px;
 }
 
 .skills {
@@ -108,7 +149,9 @@ h1 {
 }
 
 .code-pen,
-.github {
+.github,
+.twitter,
+.linkedin {
     width: 35px;
     height: 35px;
     fill: rgba(255, 255, 255, .7);
@@ -118,7 +161,9 @@ h1 {
     }
 }
 
-.github {
+.github,
+.twitter,
+.linkedin {
     margin-top: 10px;
 }
 
