--- a/scss/main/_project-cubes.scss
+++ b/scss/main/_project-cubes.scss
@@ -34,7 +34,7 @@ $inner-cube-tranZ: math.div($cube-tranZ, 2);
     height: $cube-dim;
     transform-style: preserve-3d;
     transform: rotateX(-30deg) rotateY(-40deg);
-    margin: 30px auto;
+    margin: 20px auto 40px;
     // transition: transform 10s linear;
     animation: cube-rotate 30s infinite;
     }
@@ -54,6 +54,16 @@ $inner-cube-tranZ: math.div($cube-tranZ, 2);
       background-size: cover;
       background-blend-mode: hard-light;
       opacity: 1;
+      &:before {
+        content:'';
+        position: absolute;
+        border: 2px solid #4B4E53;
+        height: 100%; 
+        width: 100%;
+        top: -2px; 
+        left: -2px;
+        border-radius: 15%;
+    }
   }
   
   .cube-face {
@@ -65,6 +75,16 @@ $inner-cube-tranZ: math.div($cube-tranZ, 2);
       border: 2px solid rgba(125, 249, 255, 1);
       // background-color: rgba(255, 255, 255, 0.1);
       ///filter: blur(2px);
+      &:before {
+          content:'';
+          position: absolute;
+          border: 2px solid #4B4E53;
+          height: 100%; 
+          width: 100%;
+          top: -2px; 
+          left: -2px;
+          border-radius: 15%;
+      }
   }
   
   .inner-image {
@@ -102,6 +122,7 @@ $inner-cube-tranZ: math.div($cube-tranZ, 2);
   
   .cube-right {
       transform: rotateY(90deg) translateZ($cube-tranZ);
+
   }
   
   // inner
