--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,7 @@ template {
 
 body {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   padding: 0.5rem;
   background-color: #4B4E53;
 }
@@ -366,12 +366,12 @@ h1 {
 .project {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  align-items: center;
   border-radius: 10px;
   padding: 20px 10px;
   position: relative;
-  overflow: hidden;
   color: white;
+  line-height: 1.3rem;
 }
 
 .title {
@@ -386,8 +386,9 @@ h1 {
 }
 
 .header {
-  border-left: 100px solid orange;
-  margin: 20px 0;
+  background-color: white;
+  width: 100%;
+  margin: 10px 0px 20px 0px;
 }
 
 .project-card {
@@ -396,6 +397,7 @@ h1 {
 }
 
 .outer-wrapper {
+  height: 100%;
   border: 1px solid black;
   border-radius: 10px;
   padding: 5px;
@@ -406,18 +408,21 @@ h1 {
   list-style: none;
   display: flex;
   font-size: 0.7rem;
-  justify-content: space-evenly;
-  margin: 10px 0px;
+  justify-content: space-between;
 }
 .site-nav ul li {
   padding: 7px;
-  background-color: #fab0ff;
-  box-shadow: -4px 4px 0 0px #83ffff;
-  color: #4B4E53;
+  border: 1px solid white;
+  color: white;
   font-weight: 600;
+  transition: background-color 0.5s ease-in, color 0.5s ease-in;
 }
 .site-nav ul li:hover {
-  color: white;
+  color: black;
+  background-color: white;
+}
+.site-nav ul .home {
+  margin-right: 10px;
 }
 
 .my-card {
@@ -520,8 +525,7 @@ h1 {
   position: relative;
   width: 100%;
   height: 10px;
-  background-color: #4B4E53;
-  border-radius: 20px;
+  border: 1px solid white;
 }
 
 .html-bar-fill {
@@ -531,7 +535,6 @@ h1 {
   bottom: 0;
   left: 0;
   width: 80%;
-  border-radius: 20px;
   background-color: white;
 }
 
@@ -539,8 +542,7 @@ h1 {
   position: relative;
   width: 100%;
   height: 10px;
-  background-color: #4B4E53;
-  border-radius: 20px;
+  border: 1px solid white;
 }
 
 .css-bar-fill {
@@ -550,7 +552,6 @@ h1 {
   bottom: 0;
   left: 0;
   width: 70%;
-  border-radius: 20px;
   background-color: white;
 }
 
@@ -558,8 +559,7 @@ h1 {
   position: relative;
   width: 100%;
   height: 10px;
-  background-color: #4B4E53;
-  border-radius: 20px;
+  border: 1px solid white;
 }
 
 .js-bar-fill {
@@ -569,12 +569,7 @@ h1 {
   bottom: 0;
   left: 0;
   width: 50%;
-  border-radius: 20px;
   background-color: white;
-}
-
-.project-grid {
-  perspective: 1500px;
 }
 
 .project-grid * {
@@ -583,25 +578,27 @@ h1 {
 
 @keyframes cube-rotate {
   50% {
-    transform: rotateX(360deg) rotateY(360deg);
+    transform: rotateX(30deg) rotateY(20deg);
   }
   100% {
-    transform: rotateX(-20deg) rotateY(-30deg);
+    transform: rotateX(-30deg) rotateY(-40deg);
+  }
+}
+@keyframes cube-grow {
+  50% {
+    width: 200px;
+    height: 200px;
   }
 }
 .cube {
   display: flex;
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 190px;
+  height: 190px;
   transform-style: preserve-3d;
   transform: rotateX(-30deg) rotateY(-40deg);
-  margin: 20px auto 40px;
+  margin: 40px auto 60px;
   animation: cube-rotate 30s infinite;
-}
-
-.cube:hover {
-  animation: cube-rotate 10s infinite;
 }
 
 .inner-face {
@@ -611,9 +608,6 @@ h1 {
   width: 50%;
   height: 50%;
   border: 2px solid rgba(125, 249, 255, 0.5);
-  background: #7df9ff no-repeat url("https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg");
-  background-size: cover;
-  background-blend-mode: hard-light;
   opacity: 1;
 }
 .inner-face:before {
@@ -629,6 +623,7 @@ h1 {
 
 .cube-face {
   position: absolute;
+  display: flex;
   top: 0;
   left: 0;
   width: 100%;
@@ -658,52 +653,78 @@ h1 {
   background: no-repeat url("https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg");
 }
 
+.project-button {
+  width: 100%;
+  background: none;
+  border: 2px solid;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 1em 2em;
+  color: #fab0ff;
+  transition: border-color 0.25s, box-shadow 0.25s, color 0.25s;
+  box-shadow: 0.3em 0.3em 0 0 #83ffff, inset 0.3em 0.3em 0 0 #83ffff;
+}
+.project-button:hover, .project-button:focus {
+  border-color: #fab0ff;
+  color: white;
+  box-shadow: 0 0 0 0 #fab0ff, inset 6em 11em 0 0 #fab0ff;
+}
+
+.project-year {
+  padding: 5px;
+}
+
+.cube-tags {
+  list-style: none;
+  padding: 5px;
+}
+
 .cube-front {
-  transform: translateZ(50px);
+  transform: translateZ(98px);
 }
 
 .cube-back {
-  transform: rotateY(180deg) translateZ(50px);
+  transform: rotateY(180deg) translateZ(98px);
 }
 
 .cube-bottom {
-  transform: rotateX(-90deg) translateZ(50px);
+  transform: rotateX(-90deg) translateZ(98px);
 }
 
 .cube-top {
-  transform: rotateX(90deg) translateZ(50px);
+  transform: rotateX(90deg) translateZ(98px);
 }
 
 .cube-left {
-  transform: rotateY(-90deg) translateZ(50px);
+  transform: rotateY(-90deg) translateZ(98px);
 }
 
 .cube-right {
-  transform: rotateY(90deg) translateZ(50px);
+  transform: rotateY(90deg) translateZ(98px);
 }
 
 .inner-front {
-  transform: translateZ(25px);
+  transform: translateZ(49px);
 }
 
 .inner-back {
-  transform: rotateY(180deg) translateZ(25px);
+  transform: rotateY(180deg) translateZ(49px);
 }
 
 .inner-bottom {
-  transform: rotateX(-90deg) translateZ(25px);
+  transform: rotateX(-90deg) translateZ(49px);
 }
 
 .inner-top {
-  transform: rotateX(90deg) translateZ(25px);
+  transform: rotateX(90deg) translateZ(49px);
 }
 
 .inner-left {
-  transform: rotateY(-90deg) translateZ(25px);
+  transform: rotateY(-90deg) translateZ(49px);
 }
 
 .inner-right {
-  transform: rotateY(90deg) translateZ(25px);
+  transform: rotateY(90deg) translateZ(49px);
 }
 
 /*# sourceMappingURL=styles.css.map */
