--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -1,9 +1,8 @@
 body {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     padding: .5rem;
-    //color: #4B4E53;
-    background-color: #4B4E53;// #E4A0B7;
+    background-color: #4B4E53;
 }
 
 h1 {
@@ -16,30 +15,19 @@ h1 {
     margin: 0 auto;
     grid-template-columns: auto;
     grid-gap: 15px 15px;
-    // justify-content: center;
 }
 
 .project {
     display: flex; 
     flex-direction: column;
-    // justify-content: center;
-    border: 2px solid black; 
+    align-items: center;
+    // border: 1px solid black; 
     border-radius: 10px;
     padding: 20px 10px;
     position: relative;
-    overflow: hidden;
-    // align-items: center;
+    //overflow: hidden;
     color: white;
-    // &:before {
-    //     position:absolute;
-    //     content: '';
-    //     bottom: 0;
-    //     left: 0;
-    //     border-bottom: 200px solid #192841;
-    //     //@warn: 292px solid transparent;
-    //     border-right: 292px solid transparent;
-    //     z-index: -99;
-    // }
+    line-height: 1.3rem;
 }
 
 .title {
@@ -54,8 +42,9 @@ h1 {
 }
 
 .header {
-    border-left: 100px solid orange;
-    margin: 20px 0;
+    background-color: white;
+    width: 100%;
+    margin: 10px 0px 20px 0px;
 }
 
 .project-card {
@@ -64,7 +53,8 @@ h1 {
 }
 
 .outer-wrapper {
-    border: 1px solid black;
+    height: 100%;
+    border: 1px solid $col-outlines;
     border-radius: 10px;
     padding: 5px;
 }
@@ -75,34 +65,25 @@ h1 {
         list-style: none;
         display: flex;
         font-size: .7rem;
-        justify-content: space-evenly;
-        margin: 10px 0px;
+        justify-content: space-between;
         li {
             padding: 7px; 
-            background-color: rgba(250,176,255,1) ; //#E18AAA
-            box-shadow: -4px 4px 0 0px rgba(131,255,255,1) ;
-            color: #4B4E53;
+            // margin-right: 10px;
+            border: 1px solid $col-text;
+            // width: 50%;
+            // background-color: rgba(250,176,255,1) ; //#E18AAA
+            // box-shadow: -4px 4px 0 0px rgba(131,255,255,1) ;
+            color: white;
             font-weight: 600;
+            transition: background-color .5s ease-in, color .5s ease-in;
             &:hover {
-                color: white;
+                color: black;
+                background-color: $col-text;
             }
         }
-        // li {
-        //     position: relative;
-        // }
-        // li:before{
-        //     content:" ";
-        //     width: 0;
-        //     height: 0;
-        //     border-left: 5px solid transparent;
-        //     border-right: 5px solid transparent;
-        //     border-bottom: 10px solid #E4A0B7;
-        //     position:absolute;
-        //     left: -15px;
-        //     // top:5px;
-        //     margin-left:10px;
-        //     z-index: -99;
-        // }
+        .home {
+            margin-right: 10px;
+        }
     }
 }
 
@@ -117,7 +98,6 @@ h1 {
     background-size: cover;
     border-radius: 10px;
     padding: 10px;
-   // box-shadow: 0px 2px 0px 0px rgba(250,176,255,1);
     position: relative; 
 }
 
