--- a/scss/main/_skill-bars.scss
+++ b/scss/main/_skill-bars.scss
@@ -14,8 +14,7 @@
     position: relative;
     width: 100%;
     height: 10px;
-    background-color: #4B4E53;
-    border-radius: 20px;
+    border: 1px solid white;
 }
 
 .html-bar-fill {
@@ -24,8 +23,7 @@
     right: 0; 
     bottom: 0; 
     left: 0;
-    width: 80%;
-    border-radius: 20px;
+    width: $skill-html;
     background-color: white;
 }
 
@@ -33,8 +31,7 @@
     position: relative;
     width: 100%;
     height: 10px;
-    background-color: #4B4E53;
-    border-radius: 20px;
+    border: 1px solid white;
 }
 
 .css-bar-fill {
@@ -44,7 +41,6 @@
     bottom: 0; 
     left: 0;
     width: 70%;
-    border-radius: 20px;
     background-color: white;
 }
 
@@ -52,8 +48,7 @@
     position: relative;
     width: 100%;
     height: 10px;
-    background-color: #4B4E53;
-    border-radius: 20px;
+    border: 1px solid white;
 }
 
 .js-bar-fill {
@@ -63,6 +58,5 @@
     bottom: 0; 
     left: 0;
     width: 50%;
-    border-radius: 20px;
     background-color: white;
 }
