added breakpoints and grid responsiveness

--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,15 @@ h1 {
   margin: 0;
 }
 
+.about {
+  color: black;
+  margin: 20px 50px;
+}
+.about p {
+  background-color: white;
+  margin-bottom: 5px;
+}
+
 .project-grid {
   display: grid;
   max-width: 100%;
@@ -367,7 +376,6 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10px;
   padding: 20px 10px;
   position: relative;
   color: white;
@@ -397,9 +405,7 @@ h1 {
 }
 
 .outer-wrapper {
-  height: 100%;
   border: 1px solid black;
-  border-radius: 10px;
   padding: 5px;
 }
 
@@ -433,7 +439,6 @@ h1 {
   background: linear-gradient(90deg, #a2ffd1 0%, #83ffff 50%, #fab0ff 100%), url("https://previews.dropbox.com/p/thumb/ABMjxDWoTXqcLBJ26dQAlZ7ZrzkYNT085HTsJuP6fKHkBw1SOhc23PA0C88awbDAs35oAXg8XopgrJDapQUP6M64WmLNkHJOW3eDCu0d1eAel8p5mGGXRakhoyglcrbd5iEs-20sybX3IS0JzeIhF09vF6nC5iVaPVTRsszxqvLVmO-0009F-Y7Jvv1WVElR5LmyuWe4Gjdf0OPPWvI9F1z4-Isy_Y9AqIggGnDnjmLGO7XL5GBgklNfd1KPiHrPc7UhTdG6XUVtS9-G9bdD_k_SycF1Pmbiyav3vOmFcv6FUux4d7lsnSpTMy18S8p3G8zjJxnHetsYZYcTcBNnTAUif0CW7yNt-NWtQDA2uTPQi4f-W9pEK_bCJPc1vMlqPwu_goUxciZVEUNUZ1SimuuBobe9w24UqHaLQJU_FJQjnwzzodPfRxhPtOS0ck0jPXw/p.jpeg?fv_content=true&size_mode=5");
   background-blend-mode: overlay;
   background-size: cover;
-  border-radius: 10px;
   padding: 10px;
   position: relative;
 }
@@ -507,6 +512,63 @@ h1 {
   font-size: 1.7rem;
 }
 
+@media screen and (min-width: 768px) {
+  .project-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .my-card {
+    grid-area: personal-card;
+  }
+
+  .site-nav {
+    justify-content: space-between;
+  }
+  .site-nav ul .home {
+    margin: 0;
+  }
+
+  .header {
+    grid-area: showcase;
+    margin-top: 1px;
+    margin-bottom: 30px;
+  }
+
+  .project-grid {
+    grid-area: projects;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
+    margin: 0;
+  }
+
+  .showcase-two {
+    grid-row-start: 2;
+    grid-column-start: 2;
+  }
+
+  .showcase-three {
+    grid-column-start: 3;
+  }
+
+  .showcase-four {
+    grid-row-start: 2;
+    grid-column-start: 4;
+  }
+
+  .site-grid {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 50px 1fr;
+    grid-column-gap: 10px;
+    grid-template-areas: "personal-card showcase" "personal-card projects";
+  }
+
+  .my-card {
+    height: 100%;
+  }
+}
 .html-rating,
 .css-rating,
 .js-rating {
@@ -725,6 +787,37 @@ h1 {
 
 .inner-right {
   transform: rotateY(90deg) translateZ(49px);
+}
+
+@media screen and (min-width: 1024px) {
+  .cube {
+    width: 160px;
+    height: 160px;
+  }
+
+  .cube-front {
+    transform: translateZ(83px);
+  }
+
+  .cube-back {
+    transform: rotateY(180deg) translateZ(83px);
+  }
+
+  .cube-bottom {
+    transform: rotateX(-90deg) translateZ(83px);
+  }
+
+  .cube-top {
+    transform: rotateX(90deg) translateZ(83px);
+  }
+
+  .cube-left {
+    transform: rotateY(-90deg) translateZ(83px);
+  }
+
+  .cube-right {
+    transform: rotateY(90deg) translateZ(83px);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
