--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,7 @@ body {
   height: 100vh;
   width: 100vw;
   padding: 0.5rem;
-  background-color: #4B4E53;
+  background-color: #2f2f2f;
 }
 
 h1 {
