--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -2,7 +2,7 @@ body {
     height: 100vh;
     width: 100vw;
     padding: .5rem;
-    background-color: #4B4E53;
+    background-color: $col-background;
 }
 
 h1 {
