--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    // height: 100vh;
     width: 100vw;
     padding: .5rem;
     background-color: $col-background;
@@ -68,6 +68,10 @@ h1 {
     border: 1px solid $col-outlines;
     // border-radius: 10px;
     padding: 5px;
+}
+
+.show-lg {
+    display: none;
 }
 
 .site-nav {
@@ -199,21 +203,40 @@ h1 {
             //align-items: center;
             .home {
                 margin: 0;
+                margin-right: 10px;
             }
         }
+    }
+
+    .lg-nav {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .archive-nav {
+        margin-right: 10px;
+    }
+
+    .hide-lg {
+        display: none;
     }
 
     .header {
         grid-area: showcase;
         margin-top: 1px;
-        margin-bottom: 30px;
+        margin-bottom: 0px;
     }
     
     .project-grid {
         grid-area: projects;
+        height: 100vh;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 50% 50%;
         margin: 0;
+        // grid-area: projects;
+        // grid-template-columns: repeat(4, 1fr);
+        // grid-template-rows: 1fr 1fr;
+        // margin: 0;
     }
 
     .showcase-two {
@@ -233,15 +256,25 @@ h1 {
     .site-grid {
         display: grid; 
         grid-template-columns: 200px 1fr;
-        grid-template-rows: 50px 1fr;
+        grid-template-rows: 20px 25px 1fr;
         grid-column-gap: 10px;
+        grid-row-gap: 10px;
         grid-template-areas: 
         "personal-card showcase"
+        "personal-card site-nav"
         "personal-card projects";
     }
 
     .my-card {
         height: 100%;
+    }
+
+    .show-lg {
+        display: flex;
+        grid-area: site-nav;
+        ul {
+            justify-content: space-between;
+        }
     }
 
 }
