updated archive to cubes and edited archive detail feature

--- a/scss/main/_index.scss
+++ b/scss/main/_index.scss
@@ -1,4 +1,6 @@
 @import 'layout',
         'skill-bars',
         'project-cubes',
-        'archive';
+        'archive',
+        'archive-cubes',
+        'contact';
