--- a/scss/utility/_variables.scss
+++ b/scss/utility/_variables.scss
@@ -1,5 +1,5 @@
-$col-background: #2f2f2f; //#4B4E53;
-$col-outlines: black;
+$col-background: #121212; //#4B4E53;
+$col-outlines: #404040;
 $col-text: white;
 
 $col-highlight: rgba(131,255,255,1);
