--- a/css/styles.css
+++ b/css/styles.css
@@ -346,8 +346,9 @@ template {
 
 body {
   width: 100vw;
+  height: 100vh;
   padding: 0.5rem;
-  background-color: #2f2f2f;
+  background-color: #121212;
 }
 
 h1 {
@@ -357,15 +358,6 @@ h1 {
 a {
   text-decoration: none;
   color: white;
-}
-
-.about {
-  color: black;
-  margin: 20px 50px;
-}
-.about p {
-  background-color: white;
-  margin-bottom: 5px;
 }
 
 .project-grid {
@@ -409,7 +401,7 @@ a {
 }
 
 .outer-wrapper {
-  border: 1px solid black;
+  border: 1px solid #404040;
   padding: 5px;
 }
 
@@ -524,7 +516,7 @@ a {
   .project-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 100vh;
+    grid-template-rows: 400px 400px;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -560,25 +552,7 @@ a {
   }
 
   .project-grid {
-    grid-area: projects;
-    height: 100vh;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 50% 50%;
     margin: 0;
-  }
-
-  .showcase-two {
-    grid-row-start: 2;
-    grid-column-start: 2;
-  }
-
-  .showcase-three {
-    grid-column-start: 3;
-  }
-
-  .showcase-four {
-    grid-row-start: 2;
-    grid-column-start: 4;
   }
 
   .site-grid {
@@ -750,6 +724,10 @@ a {
 
 .project-button {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: none;
   border: 2px solid;
   line-height: 1;
@@ -763,6 +741,25 @@ a {
   border-color: #fab0ff;
   color: white;
   box-shadow: 0 0 0 0 #fab0ff, inset 6em 11em 0 0 #fab0ff;
+}
+.project-button:hover .triangle, .project-button:focus .triangle {
+  display: flex;
+  border-left: 10px solid white;
+}
+
+.triangles {
+  display: flex;
+  margin-top: 4px;
+}
+
+.triangle {
+  display: none;
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-left: 10px solid #fab0ff;
+  border-bottom: 5px solid transparent;
+  margin-right: 2px;
 }
 
 .project-year {
@@ -854,32 +851,31 @@ a {
 }
 .archive-grid {
   display: grid;
-  height: 100vh;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 200px);
-  grid-gap: 20px 20px;
+  grid-template-columns: 1fr;
   padding: 10px;
   justify-items: center;
 }
 
 .selected {
-  grid-column-start: span 3;
+  grid-column-start: span 1;
   display: flex;
+  flex-direction: column;
   align-items: center;
   color: white;
-  max-height: 200px;
+  width: 100%;
+  justify-content: center;
+  transition: width 10s ease-in-out;
 }
 
 .project-details {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
+  margin-left: 50px;
   flex-basis: 50%;
 }
 
 .site-buttons {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -905,6 +901,181 @@ a {
   top: -2px;
   left: -2px;
   border-radius: 15%;
+}
+
+@media screen and (min-width: 470px) {
+  .archive-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px 20px;
+    padding: 10px;
+    justify-items: center;
+  }
+
+  .selected {
+    grid-column-start: span 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    width: 100%;
+    justify-content: center;
+    transition: width 10s ease-in-out;
+  }
+}
+@media screen and (min-width: 768px) {
+  .archive-grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 200px);
+  }
+
+  .selected {
+    grid-column-start: span 3;
+    flex-direction: row;
+    max-height: 200px;
+  }
+
+  .site-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+.archive-cube {
+  display: flex;
+  position: relative;
+  width: 130px;
+  height: 130px;
+  transform-style: preserve-3d;
+  transform: rotateX(-30deg) rotateY(-40deg);
+  margin: 40px 0px 60px;
+}
+
+.archive-inner-face {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  height: 50%;
+  border: 2px solid rgba(125, 249, 255, 0.5);
+  opacity: 1;
+}
+.archive-inner-face:before {
+  content: "";
+  position: absolute;
+  border: 2px solid #4B4E53;
+  height: 100%;
+  width: 100%;
+  top: -2px;
+  left: -2px;
+  border-radius: 15%;
+}
+
+.archive-cube-face {
+  position: absolute;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #7df9ff;
+}
+.archive-cube-face:before {
+  content: "";
+  position: absolute;
+  border: 2px solid #4B4E53;
+  height: 100%;
+  width: 100%;
+  top: -2px;
+  left: -2px;
+  border-radius: 15%;
+}
+
+.project-year {
+  padding: 5px;
+  color: white;
+}
+
+.cube-tags {
+  list-style: none;
+  padding: 5px;
+  color: white;
+}
+
+.archive-cube-front {
+  transform: translateZ(68px);
+}
+
+.archive-cube-back {
+  transform: rotateY(180deg) translateZ(68px);
+}
+
+.archive-cube-bottom {
+  transform: rotateX(-90deg) translateZ(68px);
+}
+
+.archive-cube-top {
+  transform: rotateX(90deg) translateZ(68px);
+}
+
+.archive-cube-left {
+  transform: rotateY(-90deg) translateZ(68px);
+}
+
+.archive-cube-right {
+  transform: rotateY(90deg) translateZ(68px);
+}
+
+.archive-inner-front {
+  transform: translateZ(34px);
+}
+
+.archive-inner-back {
+  transform: rotateY(180deg) translateZ(34px);
+}
+
+.archive-inner-bottom {
+  transform: rotateX(-90deg) translateZ(34px);
+}
+
+.archive-inner-top {
+  transform: rotateX(90deg) translateZ(34px);
+}
+
+.archive-inner-left {
+  transform: rotateY(-90deg) translateZ(34px);
+}
+
+.archive-inner-right {
+  transform: rotateY(90deg) translateZ(34px);
+}
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+.contact-panel {
+  border: 1px solid white;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.contact-panel p {
+  border: 1px solid white;
+  padding: 5px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
