--- a/scss/main/_archive.scss
+++ b/scss/main/_archive.scss
@@ -1,31 +1,33 @@
 .archive-grid {
     display: grid; 
-    height: 100vh;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 200px);
-    grid-gap: 20px 20px;
+    //height: 100vh;
+    grid-template-columns: 1fr;
+    //grid-template-rows: 1fr 200px 200px;
+    //grid-gap: 20px 20px;
     padding: 10px;
     justify-items: center;
 }
 
 .selected {
-    grid-column-start: span 3;
+    grid-column-start: span 1;
     display: flex;
+    flex-direction: column;
     align-items: center;
     color: white;
-    max-height: 200px;
+    width: 100%; 
+    justify-content: center;
+    transition: width 10s ease-in-out;
 }
 
 .project-details {
     display: flex; 
     flex-direction: column;
-    margin-left: 20px;
+    margin-left: 50px;
     flex-basis: 50%;
 }
 
 .site-buttons {
     display: flex; 
-    flex-direction: column;
     // align-items: center;
     justify-content: space-between;
 }
@@ -57,5 +59,52 @@
         border-radius: 15%;
     }
 }
+
+@media screen and (min-width: 470px){
+    .archive-grid {
+        display: grid; 
+        //height: 100vh;
+        grid-template-columns: repeat(2, 1fr);
+        // grid-template-rows: 1fr 200px 200px;
+        grid-gap: 20px 20px;
+        padding: 10px;
+        justify-items: center;
+    }
+    .selected {
+        grid-column-start: span 2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: white;
+        width: 100%; 
+        justify-content: center;
+        transition: width 10s ease-in-out;
+    }
+}
+
+@media  screen and (min-width: 768px) {
+    .archive-grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 200px);
+    }
+
+    .selected {
+        grid-column-start: span 3;
+        flex-direction: row;
+        max-height: 200px;
+    }
+
+    .site-buttons {
+        display: flex; 
+        flex-direction: column;
+        // align-items: center;
+        justify-content: space-between;
+    }
+}
+
+@media  screen and (min-width: 1024px) {
+    
+}
+
 
 
