--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -1,6 +1,6 @@
 body {
-    // height: 100vh;
     width: 100vw;
+    height: 100vh;
     padding: .5rem;
     background-color: $col-background;
 }
@@ -12,17 +12,6 @@ h1 {
 a {
     text-decoration: none;
     color: white;
-}
-
-.about {
-    color: black;
-    margin: 20px 50px; 
-    // text-align: center;
-    //margin: 10px;
-    p {
-        background-color: rgba(255, 255, 255, 1);
-        margin-bottom: 5px;
-    }
 }
 
 .project-grid {
@@ -69,7 +58,7 @@ a {
 }
 
 .outer-wrapper {
-    //height: 100vh;
+    // height: 100vh;
     border: 1px solid $col-outlines;
     // border-radius: 10px;
     padding: 5px;
@@ -193,8 +182,8 @@ a {
     .project-grid {
         display: grid; 
         grid-template-columns: 1fr 1fr;
-        // grid-template-rows: 50% 50%;
-        height: 100vh;
+        grid-template-rows: 400px 400px;
+        // height: 100vh;
     }
 }
 
@@ -234,31 +223,9 @@ a {
         margin-top: 1px;
         margin-bottom: 0px;
     }
-    
+
     .project-grid {
-        grid-area: projects;
-        height: 100vh;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 50% 50%;
         margin: 0;
-        // grid-area: projects;
-        // grid-template-columns: repeat(4, 1fr);
-        // grid-template-rows: 1fr 1fr;
-        // margin: 0;
-    }
-
-    .showcase-two {
-        grid-row-start: 2;
-        grid-column-start: 2;
-    }
-
-    .showcase-three {
-        grid-column-start: 3;
-    }
-
-    .showcase-four {
-        grid-row-start: 2;
-        grid-column-start: 4;
     }
 
     .site-grid {
