--- a/scss/main/_contact.scss
+++ b/scss/main/_contact.scss
@@ -1,29 +1,97 @@
-.contact-grid {
-    display: grid; 
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-gap: 20px;
-    padding: 20px;
-    // perspective: 1500px;
-}
+// .contact-grid {
+//     display: grid; 
+//     grid-template-columns: 1fr;
+//     grid-template-rows: 1fr;
+//     grid-gap: 20px;
+// }
 
 .contact-panel {
     border: 1px solid white;
     color: white;
-   //  transform: rotateY(-15deg);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid; 
+    grid-template-columns: 1fr 10rem;
+    grid-template-rows: min-content 1fr;
+    grid-template-areas: 
+        "about about"
+        "contact contact";
+    grid-gap: 10px 0px;
+    // display: flex;
+    // flex-direction: column;
     height: 100vh;
+    padding: 10px;
+}
+
+.character-sheet {
+    grid-area: about;
+    display: flex; 
+    flex-direction: column;
+    padding: 10px;
+    border: 1px solid white;
+    border-left: 30px solid white;
+    line-height: 1.5rem;
+}
+
+.about {
+    grid-column-start: 1 span 2;
+    // border-bottom: 10px solid white;
     p {
-        border: 1px solid white;
-        padding: 5px;
+        margin-bottom: 10px;
     }
+    h3 {
+        // border-top: 1px solid white;
+        padding-top: 5px;
+        margin-bottom: 5px;
+        letter-spacing: 1.2rem;
+    }
+}
+
+.socials {
+    grid-area: socials; 
+    height: 100%; 
+    width: 100%;
+    border: 1px solid $col-accent;
+    border-top: 30px solid $col-accent;
+    background-color: $col-accent;
 }
 
 .contact-info {
     display: flex; 
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
+    padding-top: 20px;
+    grid-area: contact;
+    height: 100%; 
+    width: 100%;
+    border: 1px solid white;
+    border-right: 50px solid white;
+    h3 {
+        position: relative;
+        margin-bottom: 10px;
+        letter-spacing: 1.2rem;
+        padding-left: 5px;
+        border-left: 5rem solid white;
+        @media screen and (min-width: 768px) {
+            border-left: 10rem solid white;
+        }
+        transition: border-left .5s ease, color .5s ease;
+        &:after {
+            position: absolute;
+            content: "";
+            width: 0;
+            height: 100%;
+            top: 0;
+            right: 0;
+            z-index: -1;
+            background-color: white;
+            transition: all 0.5s ease;
+        }
+        &:hover {
+            color: black;
+            border-left: 0rem solid white;
+        }
+        &:hover:after {
+            left: 0;
+            width: 100%;
+        }
+    }
 }
