--- a/scss/utility/_variables.scss
+++ b/scss/utility/_variables.scss
@@ -4,6 +4,7 @@ $col-text: white;
 
 $col-highlight: rgba(131,255,255,1);
 $col-primary: rgba(250,176,255,1);
+$col-accent: rgba(162,255,209,1);
 
 $skill-html: 80%;
 $skill-css: '';
